--- a/source/catalog.html
+++ b/source/catalog.html
@@ -115,19 +115,19 @@
                   <div class="filter__content accordion__content">
                     <ul class="filter__list accordion__inner">
                       <li class="filter__item">
-                        <input type="checkbox" class="visually-hidden" id="necklaces" name="necklaces" value="necklaces" checked>
+                        <input type="checkbox" class="filter__input visually-hidden" id="necklaces" name="necklaces" value="necklaces" checked>
                         <label class="filter__checkbox-label" for="necklaces">Necklaces</label>
                       </li>
                       <li class="filter__item">
-                        <input type="checkbox" class="visually-hidden" id="chokers" name="chokers" value="chokers" checked>
+                        <input type="checkbox" class="filter__input visually-hidden" id="chokers" name="chokers" value="chokers" checked>
                         <label class="filter__checkbox-label" for="chokers">Chokers</label>
                       </li>
                       <li class="filter__item">
-                        <input type="checkbox" class="visually-hidden" id="rings" name="rings" value="rings">
+                        <input type="checkbox" class="filter__input visually-hidden" id="rings" name="rings" value="rings">
                         <label class="filter__checkbox-label" for="rings">Rings</label>
                       </li>
                       <li class="filter__item">
-                        <input type="checkbox" class="visually-hidden" id="earrings" name="earrings" value="earrings" checked>
+                        <input type="checkbox" class="filter__input visually-hidden" id="earrings" name="earrings" value="earrings" checked>
                         <label class="filter__checkbox-label" for="earrings" >Earrings</label>
                       </li>
                     </ul>
@@ -145,11 +145,11 @@
                   <div class="filter__content accordion__content">
                     <ul class="filter__list accordion__inner">
                       <li class="filter__item">
-                        <input type="checkbox" class="visually-hidden" id="gold" name="gold" value="gold" checked>
+                        <input type="checkbox" class="filter__input visually-hidden" id="gold" name="gold" value="gold" checked>
                         <label class="filter__checkbox-label" for="gold">Gold</label>
                       </li>
                       <li class="filter__item">
-                        <input type="checkbox" class="visually-hidden" id="silver" name="silver" value="silver">
+                        <input type="checkbox" class="filter__input visually-hidden" id="silver" name="silver" value="silver">
                         <label class="filter__checkbox-label" for="silver">Silver</label>
                       </li>
                     </ul>
@@ -167,11 +167,11 @@
                   <div class="filter__content accordion__content">
                     <ul class="filter__list accordion__inner">
                       <li class="filter__item">
-                        <input type="checkbox" class="visually-hidden" id="flamingo" name="flamingo" value="flamingo">
+                        <input type="checkbox" class="filter__input visually-hidden" id="flamingo" name="flamingo" value="flamingo">
                         <label class="filter__checkbox-label" for="flamingo">Pink flamingo</label>
                       </li>
                       <li class="filter__item">
-                        <input type="checkbox" class="visually-hidden" id="dreams" name="dreams" value="dreams" checked>
+                        <input type="checkbox" class="filter__input visually-hidden" id="dreams" name="dreams" value="dreams" checked>
                         <label class="filter__checkbox-label" for="dreams">Dreams</label>
                       </li>
                     </ul>
