--- a/main.html
+++ b/main.html
@@ -15,6 +15,15 @@
   <header class="page__header header header--nojs">
     <div class="header__container header__container--nojs">
       <div class="header__top">
+        <form action="https://echo.htmlacademy.ru" class="header__search" method="POST">
+          <label for="search">
+            <svg width="14" height="14">
+              <use href="img/sprite.svg#icon-search"></use>
+            </svg>
+            <span class="visually-hidden">Site search</span>
+          </label>
+          <input type="search" id="search" name="search" placeholder="Type here to search">
+        </form>
         <button class="header__burger-btn" aria-label="Menu">
           <svg width="25" height="18">
             <use href="img/sprite.svg#icon-burger"></use>
@@ -38,47 +47,40 @@
           </a>
         </div>
       </div>
-      <form action="https://echo.htmlacademy.ru" class="header__search" method="POST">
-        <label for="search">
-          <svg width="14" height="14">
-            <use href="img/sprite.svg#icon-search"></use>
-          </svg>
-          <span class="visually-hidden">Site search</span>
-        </label>
-        <input type="search" id="search" name="search" placeholder="Type here to search">
-      </form>
-      <nav class="header__nav" id="menu">
-        <ul class="header__nav-list nav-list">
-          <li class="nav-list__item">
-            <a href="#" class="nav-list__link">What’s new</a>
-          </li>
-          <li class="nav-list__item">
-            <a href="catalog.html" class="nav-list__link">Chokers</a>
-          </li>
-          <li class="nav-list__item">
-            <a href="#" class="nav-list__link">Necklaces</a>
-          </li>
-          <li class="nav-list__item">
-            <a href="#" class="nav-list__link">Rings</a>
-          </li>
-          <li class="nav-list__item">
-            <a href="#" class="nav-list__link">Earrings</a>
-          </li>
-        </ul>
-        <ul class="header__sub-nav sub-list">
-          <li class="sub-list__item">
-            <a href="#" class="sub-list__link">About CH</a>
-          </li>
-          <li class="sub-list__item">
-            <a href="#" class="sub-list__link">Stores & Hours</a>
-          </li>
-          <li class="sub-list__item">
-            <a href="#" class="sub-list__link">Contact Us</a>
-          </li>
-        </ul>
-      </nav>
-      <a class="header__login" href="login.html" aria-label="Enter modal-login">Login
-      </a>
+      <div class="header__bottom">
+        <nav class="header__nav" id="menu">
+          <ul class="header__nav-list nav-list">
+            <li class="nav-list__item">
+              <a href="#" class="nav-list__link">What’s new</a>
+            </li>
+            <li class="nav-list__item">
+              <a href="catalog.html" class="nav-list__link">Chokers</a>
+            </li>
+            <li class="nav-list__item">
+              <a href="#" class="nav-list__link">Necklaces</a>
+            </li>
+            <li class="nav-list__item">
+              <a href="#" class="nav-list__link">Rings</a>
+            </li>
+            <li class="nav-list__item">
+              <a href="#" class="nav-list__link">Earrings</a>
+            </li>
+          </ul>
+          <ul class="header__sub-nav sub-list">
+            <li class="sub-list__item">
+              <a href="#" class="sub-list__link">About CH</a>
+            </li>
+            <li class="sub-list__item">
+              <a href="#" class="sub-list__link">Stores & Hours</a>
+            </li>
+            <li class="sub-list__item">
+              <a href="#" class="sub-list__link">Contact Us</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="header__login" href="login.html" aria-label="Enter modal-login">Login
+        </a>
+      </div>
     </div>
   </header>
   <main class="page__main main main--main">
@@ -88,7 +90,7 @@
     </section>
     <section class="main__new-in new-in">
       <div class="new-in__title">
-        <h2>New in</h2>
+        <h2>New In</h2>
         <a href="#" class="new-in__link section-link">Shop Now</a>
       </div>
       <div class="new-in__slider swiper-container new-in__slider--nojs">
@@ -581,7 +583,7 @@
   </footer>
   <div class="overlay"></div>
   <div class="modal-login" tabindex="0" id="login">
-    <h2>Log in</h2>
+    <h2>Log In</h2>
     <form class="modal-login__form" action="https://echo.htmlacademy.ru" method="POST" id="login-form">
       <div class="modal-login__container">
         <div class="modal-login__field">
@@ -597,7 +599,7 @@
           </label>
           <a href="#">Forgot your password?</a>
         </div>
-        <button class="modal-login__button" type="submit">Log in</button>
+        <button class="modal-login__button" type="submit">Log In</button>
         <p>
           <span>Don’t have an account?</span>
           <a href="#">Sign up</a>
